Enhance verification page with authenticity details
Added a section for verifying authenticity and environmental backing of digital packs, including instructions for serial ID and file upload.

--- a/verify.html
+++ b/verify.html
@@ -10,6 +10,11 @@
   <h1>The Pioneer Forest – Verification</h1>
   <p>Status: <strong>Online</strong></p>
 
+  <p>
+    This page verifies the authenticity and environmental backing of Pioneer Forest digital packs.
+    Enter the serial ID and upload your file to confirm inclusion in the declared CO₂ offset batch.
+  </p>
+
   <hr>
 
   <label>
@@ -20,7 +25,7 @@
   <br><br>
 
   <label>
-    Upload a test file (PNG/PDF/etc.)<br>
+    Upload your file (PDF/PNG/etc.)<br>
     <input id="file" type="file">
   </label>
 
@@ -33,6 +38,10 @@
   <hr>
 
   <p>Manifest: <a href="manifest.json" target="_blank">manifest.json</a></p>
+
+  <p style="margin-top: 8px;">
+    <a href="https://egal42.duckdns.org/forest/forest.html" target="_blank" rel="noopener">← Back to The Pioneer Forest</a>
+  </p>
 
   <script src="assets/verify.js"></script>
 </body>
