Change status to 'Checking…' in verify.html
Update status message to indicate checking state.

--- a/verify.html
+++ b/verify.html
@@ -8,7 +8,10 @@
 </head>
 <body>
   <h1>The Pioneer Forest – Verification</h1>
-  <p>Status: <strong>Online</strong></p>
+  <p>
+  Status:
+  <strong id="status" style="color: gray;">Checking…</strong>
+</p>
 
   <p>
     This page verifies the authenticity and environmental backing of Pioneer Forest digital packs.
