Add versioning to verify.js script source

--- a/verify.html
+++ b/verify.html
@@ -46,6 +46,6 @@
     <a href="https://egal42.duckdns.org/forest/forest.html" target="_blank" rel="noopener">← Back to The Pioneer Forest</a>
   </p>
 
-  <script src="assets/verify.js"></script>
+  <script src="assets/verify.js?v=1"></script>
 </body>
 </html>
