Refactor HTML structure and improve readability

--- a/verify.html
+++ b/verify.html
@@ -7,11 +7,14 @@
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
 <body>
+
   <h1>The Pioneer Forest – Verification</h1>
+
   <p>
-  Status:
-  <strong id="status" style="color: gray;">Checking…</strong>
-</p>
+    Status:
+    <strong id="status" style="color: gray;">Checking…</strong><br>
+    <small id="statusMsg">Checking system…</small>
+  </p>
 
   <p>
     This page verifies the authenticity and environmental backing of Pioneer Forest digital packs.
@@ -36,16 +39,25 @@
 
   <button id="verifyBtn">Verify</button>
 
-  <pre id="result" style="margin-top:16px; padding:12px; border:1px solid #ccc; max-width:900px; white-space:pre-wrap;"></pre>
+  <pre id="result"
+       style="margin-top:16px; padding:12px; border:1px solid #ccc;
+              max-width:900px; white-space:pre-wrap;"></pre>
 
   <hr>
 
-  <p>Manifest: <a href="manifest.json" target="_blank">manifest.json</a></p>
+  <p>
+    Manifest:
+    <a href="manifest.json" target="_blank">manifest.json</a>
+  </p>
 
   <p style="margin-top: 8px;">
-    <a href="https://egal42.duckdns.org/forest/forest.html" target="_blank" rel="noopener">← Back to The Pioneer Forest</a>
+    <a href="https://egal42.duckdns.org/forest/forest.html"
+       target="_blank" rel="noopener">
+       ← Back to The Pioneer Forest
+    </a>
   </p>
 
   <script src="assets/verify.js?v=1"></script>
+
 </body>
 </html>
