Update brand name in verification message

--- a/verify.html
+++ b/verify.html
@@ -17,7 +17,7 @@
   </p>
 
   <p>
-    This page verifies the authenticity and environmental backing of Pioneer Forest digital packs.
+    This page verifies the authenticity and environmental backing of The Pioneer Forest digital packs.
     Enter the serial ID and upload your file to confirm inclusion in the declared CO₂ offset batch.
   </p>
 
